gcc/testsuite/g++.old-deja/g++.other/redecl4.C
// { dg-do assemble  }
int main() {
  struct A {
    void f();
    void f();			// { dg-error "" } already declared
  };
}
